static/style.css
@import url('https://fonts.googleapis.com/css2?family=Jockey+One&display=swap');

:root, input, select {

    
    --base: #020001;
    --mantle: #070404;
    --crust: #0C0806;
    --overlay: #160F0A;
    --red: #D73C0E;
    --blue: #3F5E9F;
    --brown: #9C7649;

    --text: #EEE9E3;

    --body: Jockey One;
    --heading: Jockey One;
    --mono: Jockey One;

    font-family: var(--body);
    color: var(--text);
    font-size: 18pt;
    
}

@media (pointer:none), (pointer:coarse) {    
    :root {
        font-size: 48pt;
    }
}

body {
    background: linear-gradient(
        rgba(0, 0, 0, 0.2), 
        rgba(0, 0, 0, 0.8)
    ), url("background.jpg");
    background-size: cover;
    background-color: #161616;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
    min-height: 100vh;
    box-sizing: border-box;
    margin: 0;
}

input, select, option, button {
    font-size: 1rem;
    color: var(--text);
    font-family: var(--body);
    padding: .5rem 1rem;
    outline: none;
}
input, option, button {
    background-color: var(--base);
    border: 1px solid var(--overlay);
}
input {
    width: 100%;
}
select {
    background-color: transparent;
    border: none;
}
button {
    border-radius: .5rem;
}
button:focus, button:hover,
input:focus, input:hover {
    border-color: var(--blue);
}





/* 
header, main, #ctrls, footer {
    position: relative;
    margin: auto;
    display: grid;
    align-content: center;
    min-width: 50vh;
}
header, #ctrls, footer {
    width: 50vh;
}

header {
    justify-content: center;
    grid-auto-flow: row;
}

main {
    align-content: start;
    grid-auto-flow: row;
}
main input {
    padding: 1rem;
    margin: 1rem;
    margin-top: 0.5rem;
}
main label,
main select {
    margin: 1rem;
    margin-bottom: 0;
}

footer,
#editor-buttons,
#viewer-buttons {
    grid-auto-flow: column;
    justify-content: end;
}
footer input {
    margin: 0.5rem 0.25rem;    
}


input {
    background-color: transparent;
    border: 1px solid white;
    border-radius: 6pt;
    padding: 0.5rem 1rem;
    outline: none;
}
input:hover,
input:focus {
    background-color: rgba(0, 0, 0, 0.4);
}
label, select {
    opacity: 0.5;
}
label:hover, select:hover {
    opacity: 1;
}
select {
    background-color: transparent;
    border: none;
    outline: none;
}
option {
    background-color: black;
    border: none;
    outline: none;
}


#canvas {
    position: relative;
    background-color: black;
    border: 1px solid white;
    border-radius: 6pt;
    width: auto;
    margin: auto;
    min-width: 50vh;
    z-index: 10;
}

#table {
    width: auto;
    height: auto;
    padding: 0.5rem;
    border-spacing: 0;
    empty-cells: show;
    font-size: 14pt;
    border-collapse: collapse;
}
tr.grand-head {
    color: rgba(255, 255, 255, 0.5);
    border-bottom: 1px solid white;
}
tr.weight-row {
    border-top: 1px solid white;
}
td, th {
    padding: 0.5rem;
}
td:hover, th:hover {
    background-color: rgba(255, 255, 255, 0.1);
}


@media print {
    #canvas {
        position: fixed;
        top: 0; bottom: 0; left: 0; right: 0;
        background-color: white;
        border-radius: 0;
    }
    #table, th, td {
        border: 1px solid black;
        height: auto;
    }
    * {
        color: black;
    }
    :root {
        font-size: 18pt;
    }
} */

